--- a/app/views/dynamic_pages/e100_test.html.erb
+++ b/app/views/dynamic_pages/e100_test.html.erb
@@ -114,9 +114,9 @@
       
                <div class="audio_set">
                  
-                    <audio class="jp" src="/jsf/<%= mstr.id %>.mp3"></audio>
+                    <audio class="jp" src="<%=Settings.mp3.root_path%>/jsf/<%= mstr.id %>.mp3"></audio>
                
-                    <audio class="en" src="/sf/<%= mstr.id %>.mp3"></audio>
+                    <audio class="en" src="<%=Settings.mp3.root_path%>/sf/<%= mstr.id %>.mp3"></audio>
                           
               </div>
         
