--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,38 @@ height: 10px;
 
 }
 
+#result_text2 {
+   
+    border:none;
+  border-radius:5px;
+  box-shadow: none;
+  padding: 2px 8px; 
+  margin-top: 12px  
+  
+    
+    
+}
+
+.mic {
+    
+    margin-top: 8px;
+    margin-left: 8px;
+}
+
+.btn {
+    width:50px;
+    font-size:12px;
+    
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:2px 0 5px;
+    color:#fff;
+    background-color:#49a9d4;
+    border-radius:10px;
+    
+    
+}
 
 
 /* navbar テキストカラー */
