--- a/app/views/dynamic_pages/e100.html.erb
+++ b/app/views/dynamic_pages/e100.html.erb
@@ -1,36 +1,28 @@
+<div class=".container"></div>
 
- <div class="audio_flame">
+<div class="row"></div>
+<div class="col-md-6"></div>
+  
+<div class="audio_flame">
+    
 <div>     
-<!--<input id="globalMenu1" type="button" value="連続再生" onclick="ren()">-->
-
-<span id="globalMenu1" onclick="ren()"><i class="fa fa-play-circle fa-4x"></i>play</span >
-
-<!--<input id="globalMenu2" type="button" value="ランダム再生" onclick="rand()">-->
-
-<span id="globalMenu2" type="button" onclick="rand()"><i class="fa fa-random fa-4x" ></i>random</span>
-
-<!--<input type="button" value="" onclick="pause()">-->
-<!--<span id="pr_chg" type="button"><i class="fa fa-pause-circle fa-4x" onclick="pause_resume()"></i>pause</span>
-<a id="pr_chg" ><i class="fa fa-pause-circle fa-4x" onclick="pause_resume()"></i>pause</a>-->
-<span id="pr_chg" type="button"  onclick="pause_resume()"><i class="fa fa-pause-circle fa-4x" ></i><a id="atxt">pause</a></span>
-<!--<a id="pr_chg" onclick="pause_resume()"><span class="fa fa-pause-circle fa-4x" ></span>pause</a>-->
-
-
-<!--<input type="button" value="再開" onclick="resume()">-->
-<!--<input type="button" value="終了" onclick="cancelAudio()">-->
-<span type="button" onclick="cancelAudio()"><i class="fa fa-stop-circle fa-4x" ></i>cancel</span>
+  <span id="globalMenu1" onclick="ren()"><i class="fa fa-play-circle fa-4x"></i>play</span >
+  <span id="globalMenu2" type="button" onclick="rand()"><i class="fa fa-random fa-4x" ></i>random</span>
+  <span id="pr_chg" type="button"  onclick="pause_resume()"><i class="fa fa-pause-circle fa-4x" ></i><a id="atxt">pause</a></span>
+  <span type="button" onclick="cancelAudio()"><i class="fa fa-stop-circle fa-4x" ></i>cancel</span>
+  <span id="seek_result"><%= flash[:warning].html_safe %></span >
 </div> 
 
-<div id="vss">  
-<div><span>volume</span><input type="range"  id="volume" min="0" max="100" value="50" class="custom"><span id="value" class="vs">50</span></div>
 
-<div><span>speed</span><input type="range" id="speed" value="1.0" min="0.5" max="1.5"　required step="0.1" class="custom"><span id="value1" class="vs">1.0</span></div> 
- 
+<!--ボリューム スピードスライダー-->
+<div id="vss">  
+  <div><span>volume</span><input type="range"  id="volume" min="0" max="100" class="custom"><span id="value" class="vs"></span></div>
+  <div><span>speed</span><input type="range" id="speed" value="1.0" min="0.5" max="1.5"　required step="0.1" class="custom"><span id="value1" class="vs"></span></div> 
 </div> 
 
 <div class="b_group">
 
-    <span><a>日英の再生間隔</a>
+    <span>日英の再生間隔
     
     <select id="select_time">
       <option value="0">０秒</option>
@@ -41,8 +33,8 @@
         
         
     <span class="radio_group">ループ再生
-    <input type="radio" name="loop" value="0" checked>しない
-    <input type="radio" name="loop" value="1">する
+    <input type="radio" name="loop" value=0 checked>しない
+    <input type="radio" name="loop" value=1>する
     </span>
     
     <span class="radio_group">再生対象
@@ -52,13 +44,38 @@
 
 </div>
 
-<a id="play_this"></a>
+ <a id="play_this"></a>
 
 </div>
 
-  <%= will_paginate @masters %>  
-
+<div class="main">
+  
+ <div class="digg_pagination">
+   <%= will_paginate @masters %>  
+ </div>
  
+ <script>
+ //ボリューム
+  var elem = document.getElementById('volume');
+  var target = document.getElementById('value');
+  var rangeValue = function (elem, target) {
+    return function(evt){
+      target.innerHTML = elem.value;
+    }
+  }
+  elem.addEventListener('input', rangeValue(elem, target));
+ //speed
+  var elem1 = document.getElementById('speed');
+  var target1 = document.getElementById('value1');
+  var rangeValue1 = function (elem1, target1) {
+    return function(evt){
+      target1.innerHTML = elem1.value;
+    }
+  }
+  elem1.addEventListener('input', rangeValue1(elem1, target1));
+  
+</script>
+
 
 
 <ul class="hoge">
@@ -78,3 +95,11 @@
      <% end %>
   
 </ul>
+
+<div class="digg_pagination">
+   <%= will_paginate @masters %>  
+ </div>
+ 
+</div>
+</div>
+</div>
