add devise confirmation

--- a/app/views/dynamic_pages/e100.html.erb
+++ b/app/views/dynamic_pages/e100.html.erb
@@ -16,8 +16,8 @@
 
 <!--ボリューム スピードスライダー-->
 <div id="vss">  
-  <div><span>volume</span><input type="range"  id="volume" min="0" max="100" class="custom"><span id="value" class="vs"></span></div>
-  <div><span>speed</span><input type="range" id="speed" value="1.0" min="0.5" max="1.5"　required step="0.1" class="custom"><span id="value1" class="vs"></span></div> 
+  <div><span>volume</span><input type="range"  id="volume" min="0" max="100" class="custom" value=50><span id="value" class="vs">50</span></div>
+  <div><span>speed</span><input type="range" id="speed" value="1.0" min="0.5" max="1.5"　required step="0.1" value="1.0" class="custom"><span id="value1" class="vs">1.0</span></div> 
 </div> 
 
 <div class="b_group">
