--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,11 @@ li {
 margin-bottom: 5px;
 }
 
+.toplink {
+    
+    color:white;
+}
+
 .navbar-nav {
     
    width: 400px; 
@@ -47,7 +52,12 @@ margin-bottom: 5px;
   
 }
 
-
+p.navbar-right a {
+    
+     margin-right: 30px;
+     color:white;
+    
+}
 
 #logincap {
   
@@ -56,23 +66,38 @@ margin-bottom: 5px;
 }
 
 .login_btn {
-    
+ 
   background-color: #333;
   border: 2px solid #333;
   color: #fff;
-  line-height: 40px;
-  width:150px;
-  
+  line-height: 30x;
+  width:400px;
+  height:40px;
    font-size:40; 
+}
+#signup_btn {
+    
+    margin-top: 20px;
+    font-size:23px; 
+}
+
+.submain {
+    margin-top: 310px;
+    
 }
 
 .main {
- margin-top: 310px;
+ margin-top: 10px;
    /*padding-top:10px;
   margin-top:50px;
   height:auto;
   padding-bottom:10px;
   margin-bottom:80px;*/
+}
+
+.mainhome {
+    margin-top: 60px;
+    
 }
 
  /* navbar 全体の背景色とボーダーカラー */
