--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -52,64 +52,18 @@
     
    
   </script>
+
+  <div class="container">  
   
-
-  <!-- ヘッダーここから -->
-  <!--<div id="header">
-  <div id="headerArea">
-    
-   <div id="header_logo">英会話１００選シリーズ</div>
-  
- 
-  </div>
-  </div>-->
-  <!-- ヘッダーここまで -->
-  <h1>英作くん</h1>
-  
- <!-- <div id="main_panel">
-  <div id="main_panelArea">
-
-    
-
-  </div>
-</div>-->
-
-<!-- コンテンツ グレー背景ここから 
-  <div class="content_g clearfix">
-  <div class="content_gArea">
-
-    <div class="main">-->
-  <div class="row">
-    <div class="col-md-6">
-      <h2>ビジネス</h2>
+    <div class="mainhome">
       
-       <ul class="pulldown" > 
-       
-            <% @products1.each do |prdct1| %>
-            　
-             <li><a class="textflame" href="<%= ctg_dynamic_pages_path(product_id: prdct1.id) %>"><%= prdct1.pnam %></a>
-               　 
-                <ul class="listx" >
-               
-                     <% Category.where(product_id: prdct1.id).each do |ctg| %>
-        　　　　
-                       <li><a href="<%= e100_dynamic_pages_path(category_id: ctg.id) %>"><%= ctg.ctg %></a></li>
-                       
-                     <% end %> 
-                     
-                </ul>
-                
-               </li>
-        
-            <% end %>
+     <h3>日常英会話 約６万フレーズを掲載！
+  
+     <a href="/dynamic_pages/e100">全件表示</a></h3>
+     <div class="row">
+　　<div class="col-md-3">
     
-     　 </ul>
-    </div>
-
-   <div class="col-md-6">
-    <!-- <div class="side">-->
-    
-    <h2>日常会話</h2>
+    <h4>単語より検索（頻出単語順）</h4>
     
      <ul class="pulldown" >  
  
@@ -125,36 +79,42 @@
                        
                      <% end %> 
                      
-                </ul> 
+                  </ul> 
+        
+        <% end %>
+        
+      </ul>
+      
+</div>
+    
+    <div class="col-md-4"> 
+    
+    <h4>熟語より検索</h4>
+     
+       <ul class="pulldown" >  
+ 
+         <% @products3.each do |prdct3| %>
+             
+             <li><a class="textflame" href="<%= ctg_dynamic_pages_path(product_id: prdct3.id) %>"><%= prdct3.pnam %></a>
+            
+                 <ul class="listx" >
+               
+                     <% Category.where(product_id: prdct3.id).each do |ctg| %>
+        　　　　
+                       <li><a href="<%= e100_dynamic_pages_path(category_id: ctg.id) %>"><%= ctg.ctg %></a></li>
+                       
+                     <% end %> 
+                     
+                  </ul> 
         
         <% end %>
     
       </ul>
-    </div>
-  </div>
-
-
-<!-- </div>
-
-  </div>
-  </div>
-   コンテンツここまで -->
-  <!-- コンテンツここから 
-
+  </div> 
  
-  </div>-->
- 
-  <!-- コンテンツここまで -->
-  
-   <!-- フッターここから 
-   <div id="footer">
-  <div id="footerArea">
-    <div id="footer_nav">
-      <ul>
-        <li><a href="#" class="menu-a">About</a></li>
-        <li><a href="#" class="menu-a">Services</a></li>
-        <li><a href="#" class="menu-a">Contact</a></li>
-      </ul>
-    </div>-->
-    
-   
+  </div>
+
+</div>
+
+</div>
+
