--- a/app/assets/stylesheets/dynamic_pages.scss
+++ b/app/assets/stylesheets/dynamic_pages.scss
@@ -5,22 +5,24 @@
 @charset "utf-8";
 
 .listx  {
-    margin-bottom: 1px;
-    position:absolute; 
-    top: -12px; 
-    left: 230px;
-    width: 200px;
-    list-style-type: disc;
+   
     
 }
 
 .listx li {
  background-color: transparent;
  margin-bottom: 1px;
- 
+  margin-bottom: 1px;
+    position:absolute; 
+    top: -12px; 
+    left: 80px;
+   
+    width: 200px;
+    list-style-type: square;
 }
  
 .pulldown li { 
+    margin-left: 10px;
     position:relative;  
     padding: 5px 10px;
     width: 230px;
@@ -39,10 +41,10 @@
 
 
  .textflame {
- background-color: #336699;
+      background-color: #336699;
 	color: #fff;
 	display: block;
-	width: 50px;
+	width: 80px;
 	padding: 5px 10px;
 	text-decoration: none;
 	border-radius: 10px; 
