--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,19 @@
-
-
- <nav class="navbar  navbar-default">
 	
+	<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6"></div>
+
+<nav class="navbar  navbar-default">
+	 <!--<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">-->
+	 
+
+    
 		 <a class="navbar-brand" href="#">
-			  
+		  
 				<span ><i class="fa fa-rebel" style="color: white">カジュアル英語</i></span>
 				
 		</a>
+		
 
 	<ul class="nav navbar-nav">
 			 
@@ -36,9 +43,7 @@
         
       
     </ul>
-    
-    </div>
-   
+  
      <ul>
         
          <p class="navbar-text navbar-right">
@@ -55,6 +60,10 @@
     
   </nav> 
   
+     </div>
+    </div>
+   </div>
+   
 <script>
 
     /*録音　https://qiita.com/inouet/items/2c9e218c05f547bb6852から*/
