--- a/app/assets/stylesheets/audio_flame.css.scss
+++ b/app/assets/stylesheets/audio_flame.css.scss
@@ -7,9 +7,9 @@ div.audio_flame {
   border-radius: 10px;         /* CSS3の書き方 */
   
   border: 3px gray solid;     /* 枠線の装飾 */
-  /* background-color: #FFFAFA;   /* #DCDCDC #D0D5CF背景色 */
+  /* background-color: #FFFAFA;   /* #DCDCDC #D0D5CF背景色 #A9A9A9*/
   
-  background:linear-gradient(#A9A9A9, #FFFAFA);
+  background:linear-gradient(#A9A9A9, #F8F8FF);
   width: 595px; height: 260px;
   box-shadow:5px 5px;
   
