--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,19 @@
 	
 	<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-6"></div>
+    <div class="col-sm-4"></div>
 
 <nav class="navbar  navbar-default">
-	 <!--<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">-->
-	 
+	<div class="container-fluid">
+	 <div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			
+		</div>
 
     
 		 <a class="navbar-brand" href="#">
@@ -17,7 +25,7 @@
 
 	<ul class="nav navbar-nav">
 			 
-			 <li><form method="get" action="/dynamic_pages/e100_seek">
+	 <li><form method="get" action="/dynamic_pages/e100_seek">
 			   
               <input id="result_text2" type="text"  placeholder="検索キーワードを入力" name="fstr" /> 
               <input id="result_btn" type="submit" value="検索" />
