--- a/app/views/dynamic_pages/e100.html.erb
+++ b/app/views/dynamic_pages/e100.html.erb
@@ -10,7 +10,8 @@
   <span id="globalMenu2" type="button" onclick="rand()"><i class="fa fa-random fa-4x" ></i>random</span>
   <span id="pr_chg" type="button"  onclick="pause_resume()"><i class="fa fa-pause-circle fa-4x" ></i><a id="atxt">pause</a></span>
   <span type="button" onclick="cancelAudio()"><i class="fa fa-stop-circle fa-4x" ></i>cancel</span>
-  <span id="seek_result"><%= flash[:warning].html_safe %></span >
+  <span><textarea id="seek_result" cols="18"><%= flash[:warning].html_safe %></textarea ></span>
+  
 </div> 
 
 
@@ -90,7 +91,7 @@
                  
              </div>
            
-                 <li><a href="javascript:tan(<%= i %>)"><%= mstr.j %><br>  <%= mstr.e %>  </a></li>
+     <li><a href="javascript:tan(<%= i %>)"><%= mstr.j %><br>  <%= mstr.e %>  </a></li>
             
      <% end %>
   
