--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -95,7 +95,12 @@ p.navbar-right a {
   margin-bottom:80px;*/
 }
 
+.container {
+    margin-left: 10px; 
+}
+
 .mainhome {
+   
     margin-top: 60px;
   z-index: 0;
 }
