--- a/app/assets/stylesheets/dynamic_pages.scss
+++ b/app/assets/stylesheets/dynamic_pages.scss
@@ -30,7 +30,28 @@
     width: 230px;
     margin-top: 0em;
     list-style-type: disc;
+ 
+}
+.tanbtn li { 
+    margin-left: 10px;
+    position:relative;  
+    padding: 5px 10px;
+   
+    margin-top: 0em;
+    list-style-type: none;
+    display: inline-block;
+ 
+}
 
+.zyukubtn li { 
+    margin-left: 10px;
+    position:relative;  
+    padding: 5px 10px;
+   
+    margin-top: 0em;
+    list-style-type: none;
+    display: inline-block;
+ 
 }
 
 
@@ -46,7 +67,7 @@
       background-color: #336699;
 	color: #fff;
 	display: block;
-	width: 80px;
+	width: 30px;
 	padding: 5px 10px;
 	text-decoration: none;
 	border-radius: 10px; 
